[gd_scene load_steps=6 format=3 uid="uid://chy3lw67e8wwc"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7cs77"]
[ext_resource type="Script" path="res://scripts/components/interaction_activator_component.gd" id="2_21wra"]
[ext_resource type="PackedScene" uid="uid://b6120kuynkwk2" path="res://meshes/cat.glb" id="3_dnmks"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y8cbw"]
size = Vector3(0.268434, 0.592107, 0.637383)

[sub_resource type="SphereShape3D" id="SphereShape3D_53pu2"]
radius = 0.8

[node name="Player" type="CharacterBody3D"]
collision_layer = 2049
collision_mask = 2049
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_7cs77")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0300596, 0, 0.0244713)
shape = SubResource("BoxShape3D_y8cbw")

[node name="InteractionActivatorComponent" type="Node3D" parent="."]
script = ExtResource("2_21wra")

[node name="InteractArea" type="Area3D" parent="InteractionActivatorComponent"]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionActivatorComponent/InteractArea"]
shape = SubResource("SphereShape3D_53pu2")

[node name="GroundPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.226835, 0)

[node name="cat" parent="." instance=ExtResource("3_dnmks")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0301514, 0, 0.014535)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 9.215

[connection signal="area_entered" from="InteractionActivatorComponent/InteractArea" to="InteractionActivatorComponent" method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractionActivatorComponent/InteractArea" to="InteractionActivatorComponent" method="_on_interact_area_area_exited"]
